Add API Changes
